Fix NMI date block on mobile
Also move it out of the MD file

--- a/main.css
+++ b/main.css
@@ -88,11 +88,15 @@ img {
         text-align: center;
     }
 
+    .no-mobile {
+        display: none;
+    }
+
     #topflex {
         flex-flow: column wrap;
     }
 
-    .no-mobile {
-        display: none;
+    #sessionheader {
+        flex-flow: column wrap !important;
     }
 }
